[package]
name = "async-s3fifo"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
clocksource = "0.8.1"
crossbeam-deque = "0.8.6"
libc = "0.2"
loom = { version = "0.7", features = ["checkpoint"], optional = true }
memmap2 = "0.9.9"
rand = "0.9.2"
tokio = { version = "1.48.0", features = ["full", "sync"] }
zstd = "0.13"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[features]
default = ["validation"]
loom = ["dep:loom"]
# Adds magic bytes and checksums to item headers for corruption detection (~3 bytes per item)
validation = []

[[bench]]
name = "hashtable"
harness = false
